removing old code, found 20+yo bug (resulting in a lesser optimization only) in Util.compile_search